# RST-Tauri

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/agent/: director_hint.rs  input_preparser.rs  llm_support.rs  mod.rs
src-tauri/src/agent/cache/: batch.rs  mod.rs
src-tauri/src/agent/cognitive/: cognitive_pass.rs  mod.rs  subjective_reducer.rs
src-tauri/src/agent/knowledge/: access_protocol.rs  access_resolver.rs  mod.rs  reveal.rs  store.rs
src-tauri/src/agent/location/: fact_resolver.rs  mod.rs  resolver.rs  route_planner.rs
src-tauri/src/agent/models/: character.rs  common.rs  knowledge.rs  location.rs  mod.rs  scene.rs  session.rs  skill.rs  subjective.rs
src-tauri/src/agent/presentation/: mod.rs  surface_realizer.rs
src-tauri/src/agent/prompting/: README.md  mod.rs
src-tauri/src/agent/runtime/: budget_monitor.rs  config_snapshot.rs  conflict.rs  mod.rs  parallel_cognitive.rs  runtime.rs  state_committer.rs  trace.rs  turn_state.rs
src-tauri/src/api/: anthropic.rs  anthropic_files.rs  claude_code.rs  deepseek.rs  gemini.rs  gemini_files.rs  mod.rs  openai_chat.rs  openai_files.rs  openai_responses.rs  provider.rs  sse.rs
src-tauri/src/commands/: agent_commands.rs  chat_commands.rs  log_commands.rs  mod.rs  runtime_commands.rs  st_commands.rs
src-tauri/src/config/: llm_contracts.rs  loader.rs  mod.rs  registry.rs  validator.rs  world_argument.rs
src-tauri/src/logging/: context.rs  event_logger.rs  llm_logger.rs  mod.rs  retention.rs
src-tauri/src/st/: character.rs  keyword_matcher.rs  macros.rs  mod.rs  preset.rs  regex_engine.rs  runtime_assembly.rs  world_info_injection.rs  worldbook.rs
src-tauri/src/storage/: attachment_upload_cache.rs  json_store.rs  mod.rs  paths.rs  sqlite_store.rs  st_resources.rs
src-tauri/src/text_format/: json.rs  mod.rs  yaml.rs
(+235 files in other folders)
