[package]
name = "rst-tauri"
version = "0.1.0"
description = "Ran's SmartTavern - Dual-mode AI chat application"
authors = ["Z"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
base64 = "0.22"
png = "0.17"
flate2 = "1"
crc32fast = "1"
regex = "1"
lru = "0.16"
tempfile = "3"
serde_yaml = "0.9"
sha2 = "0.10"
once_cell = "1"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
